trunk/Archive/cf8a559e09bef82801445f54db061550-bff069f172c3f5c3bc4a5e28d7ac9796/output
+ g++ -std=c++11 -Wall -pedantic main.cpp
main.cpp: In member function ‘T* uninitialized_allocator<T>::allocate(std::size_t)’:
main.cpp:24:67: error: expected primary-expression before ‘)’ token
         return static_cast<T*>(::operator new(static_cast<void*>(&));
                                                                   ^
main.cpp:24:69: error: expected ‘)’ before ‘;’ token
         return static_cast<T*>(::operator new(static_cast<void*>(&));
                                                                     ^
main.cpp: In member function ‘T* uninitialized_allocator<T>::allocate(std::size_t) [with T = int; std::size_t = long unsigned int]’:
main.cpp:25:5: warning: control reaches end of non-void function [-Wreturn-type]
     }
     ^
